force-app/main/default/objects/Vehicle__c/fields/Account_V__c.field-meta.xml
<CustomField>
    <fullName>Account_V__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_V</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>