force-app/main/default/objects/Vehicle__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <label>License Plate</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>