force-app/main/default/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Ford</fullName>
            </value>
            <value>
                <fullName>- Toyota</fullName>
            </value>
            <value>
                <fullName>- Honda</fullName>
            </value>
            <value>
                <fullName>- Chevrolet</fullName>
            </value>
            <value>
                <fullName>- BMW</fullName>
            </value>
            <value>
                <fullName>- Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>- Audi</fullName>
            </value>
            <value>
                <fullName>- Volkswagen</fullName>
            </value>
            <value>
                <fullName>- Hyundai</fullName>
            </value>
            <value>
                <fullName>- Nissan</fullName>
            </value>
            <value>
                <fullName>- Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>