force-app/main/default/objects/Vehicle__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Current Mileage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>