force-app/main/default/objects/Vehicle__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Active</fullName>
            </value>
            <value>
                <fullName>- Inactive</fullName>
            </value>
            <value>
                <fullName>- In Service</fullName>
            </value>
            <value>
                <fullName>- Retired</fullName>
            </value>
            <value>
                <fullName>Initial Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>