force-app/main/default/objects/Vehicle__c/fields/Vehicle_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Identification_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the 17-character Vehicle Identification Number</inlineHelpText>
    <label>Vehicle Identification Number</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>