force-app/main/default/objects/Vehicle__c/validationRules/Mileage_Logic_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_Logic_Check</fullName>
    <active>true</active>
    <description>Current mileage cannot be negative</description>
    <errorConditionFormula>Mileage__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Mileage__c</errorDisplayField>
    <errorMessage>Vehicle mileage cannot be negative</errorMessage>
</ValidationRule>