force-app/main/default/objects/Vehicle__c/validationRules/Vehicle_Year_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_Year_Range</fullName>
    <active>true</active>
    <description>Vehicle year must be between 1990 and current year + 1</description>
    <errorConditionFormula>OR(
  Year__c &lt; 1990,
  Year__c &gt; YEAR(TODAY()) + 1
)</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Vehicle year must be between 1990 and next year</errorMessage>
</ValidationRule>