force-app/main/default/objects/Vehicle__c/validationRules/VIN_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VIN_Format_Validation</fullName>
    <active>true</active>
    <description>Ensures VIN is exactly 17 alphanumeric characters</description>
    <errorConditionFormula>OR(
  LEN(Vehicle_Identification_Number__c) != 17,
  NOT(ISBLANK(Vehicle_Identification_Number__c)) &amp;&amp; NOT(REGEX(Vehicle_Identification_Number__c, &quot;^[A-HJ-NPR-Z0-9]{17}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Vehicle_Identification_Number__c</errorDisplayField>
    <errorMessage>VIN must be exactly 17 characters and contain only valid characters (no I, O, or Q)</errorMessage>
</ValidationRule>